--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -1,4 +1,7 @@
 <h1>Main page</h1>
 
-
+<div class="btn-group">
+  <a href="#" class="btn btn-primary active" aria-current="page">Sign up</a>
+  <a href="#" class="btn btn-primary">Login</a>
+</div>
 
