--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,8 @@
         </li>
       </ul>
       
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
       <%# Подгрузка страницы %>
       <%= yield %>
 
