Установка и настройка Devise

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,8 +23,10 @@
         </li>
       </ul>
       
+      <%# Flash сообщения Devise %>
       <p class="notice"><%= notice %></p>
       <p class="alert"><%= alert %></p>
+
       <%# Подгрузка страницы %>
       <%= yield %>
 
