--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,13 @@
         <li class="nav-item">
           <%= link_to "About", pages_about_path, class: "nav-link" %>
         </li>
+
+        <% if user_signed_in? %>
+        <li class="nav-item">
+          <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "nav-link" %>
+        </li>
+        <% end %>
+
       </ul>
       
       <%# Flash сообщения Devise %>
