--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,22 +13,8 @@
   <body>
     <div class="container">
       
-      <%# Наше костыльное меню %>
-      <ul class="nav">
-        <li class="nav-item">
-          <%= link_to "Main Page", root_path, class: "nav-link active"  %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "About", pages_about_path, class: "nav-link" %>
-        </li>
-
-        <% if user_signed_in? %>
-        <li class="nav-item">
-          <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "nav-link" %>
-        </li>
-        <% end %>
-
-      </ul>
+      <%# подключаем паршл навигации ( _partialname.html.erb ) %>
+      <%= render "layouts/navigation"%>
       
       <%# Flash сообщения Devise %>
       <p class="notice"><%= notice %></p>
